<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginTop="30dp"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.goldfish.sevenseconds.view.CircleImageView
            android:id="@+id/user_face"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#fff"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/user_face"
            android:layout_alignBottom="@+id/user_face"
            android:autoLink="all"
            android:textSize="22dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:maxLength="8"
            android:text="@string/default_nickname"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/sex_string"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            style="@style/AlertDialog.AppCompat.Light"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/select_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:autoLink="all"
            android:layout_toRightOf="@+id/sex_string"
            android:text="@string/line"
            android:gravity="right"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/birthday_string"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            style="@style/AlertDialog.AppCompat.Light"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/select_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:autoLink="all"
            android:layout_toRightOf="@+id/birthday_string"
            android:text="@string/line"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:hint="@string/hint_introduction"
        android:gravity="left"
        android:textColorHighlight="#cccccc"
        android:background="@drawable/edit_bg" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_change"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"/>

</LinearLayout>